--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -22,7 +22,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerview_model"
+            android:id="@+id/recycler_view"
             android:layout_width="409dp"
             android:layout_height="729dp"
             app:layout_constraintEnd_toEndOf="parent"
